Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,26 +1,26 @@
 {
-  "store_id": 51357,
-  "name": "plusplus",
   "domain": "plusplus.netlify.app",
-  "short_name": "plusplus",
-  "description": "plusplus",
-  "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
+  "currency_symbol": "R$",
+  "primary_color": "#000000",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
+  "bg_color": "#ffffff",
+  "repository": "ecomplus-stores/plusplus",
   "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "name": "plusplus",
+  "short_name": "plusplus",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
-  "country_code": "BR",
-  "repository": "ecomplus-stores/plusplus",
+  "mini_logo": "",
+  "font_family": "_",
+  "favicon": "/img/uploads/favicon.png",
   "icons_font": "_",
-  "font_family": "_"
+  "country_code": "BR",
+  "secondary_color": "#393e46",
+  "icon": "/img/icon.png",
+  "store_id": 51357,
+  "description": "plusplus",
+  "large_icon": "/img/large-icon.png"
 }
