--- a/content/settings.json
+++ b/content/settings.json
@@ -8,14 +8,14 @@
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/plusplus",
-  "logo": "/img/uploads/logo.png",
+  "logo": "/img/uploads/plusplus_png_verde.png",
   "name": "plusplus",
   "short_name": "PlusPlus",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
   "font_family": "_",
-  "favicon": "/img/uploads/plusplus_png_verde.png",
+  "favicon": "/img/uploads/logo-favcon.png",
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#000000",
