--- a/content/settings.json
+++ b/content/settings.json
@@ -9,7 +9,7 @@
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/plusplus",
   "logo": "/img/uploads/logo-favcon.png",
-  "name": "plusplus",
+  "name": "PlusPlus",
   "short_name": "PlusPlus",
   "lang": "pt_br",
   "currency": "BRL",
