--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "plusplus.netlify.app",
+  "domain": "loja.plusplus.com.br",
   "currency_symbol": "R$",
   "primary_color": "#000000",
   "theme": {
