--- a/.functions/package.json
+++ b/.functions/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "description": "SSR for Storefront on Firebase with Cloud Functions",
   "engines": {
-    "node": "14"
+    "node": "16",
+    "npm": "^8.19.4"
   },
   "main": "index.js",
   "dependencies": {
-    "@ecomplus/storefront-renderer": "^2.10.9",
-    "firebase-admin": "^11.7.0",
-    "firebase-functions": "^4.3.1"
+    "@ecomplus/storefront-renderer": "^2.11.1",
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^4.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
